--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "fast-csv": "^4.3.6",
     "fs": "^0.0.1-security",
     "json2csv": "^5.0.6",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mysql2": "^2.0.2",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "sequelize": "^5.21.2",
     "stream-json": "^1.7.1"
   }
